# Panoxyda

./: CMakeLists.txt  README.md
Engine/CNC/: Syscalls.c
Engine/Headers/: Binary.h  Checksum.h  Enc.h  Helper.h  Server.h  ThinkPHP.h  Util.h
Engine/Headers/Analys/: DSLScanner.h  IoTScanner.h  Killer.h  Scanner.h
Engine/Headers/Attack/: Attack.h  Service.h
Engine/Headers/CNC/: Admin.h  Client.h  Command.h  Syscalls.h  Worker.h  Xor.h
Engine/Headers/Config/: Config.h
Engine/Headers/Data/: Table.h
Engine/Headers/IoT/: Asus.h  Comtrend.h  Dpon.h  Gpon.h  Hnap.h  Huawei.h  Jaws.h  Netlink.h  Rand.h  Realtek.h  Resolv.h  Tr.h
Engine/Headers/Net/: Connection.h  Linksys.h  Protocol.h  TCP.h  Telnet.h  Tor.h  UDP.h
Engine/IoT/: Jaws.c
